[project]
name = "ou-wbpy"
version = "0.0.1"
description = "Simple wrapper for running wbpy in JupyterLite"
readme = "README.md"
authors = [{name = "Tony Hirst"}]
license = {text = "MIT"}
dependencies = [
    "wbpy",
    "pandas"
]

[project.urls]
Homepage = "https://github.com/innovationOUtside/ou-wbpy"
